[gd_scene load_steps=4 format=3 uid="uid://b2rag43atvvgy"]

[ext_resource type="Script" uid="uid://chvec31pbvckl" path="res://scenes/Multiplayer/start_panel.gd" id="1_3rqlm"]

[sub_resource type="LabelSettings" id="LabelSettings_tif4o"]
font_size = 48

[sub_resource type="Theme" id="Theme_tif4o"]
default_font_size = 75

[node name="StartPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rqlm")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -290.0
offset_right = 303.0
offset_bottom = -222.99991
grow_horizontal = 2
grow_vertical = 2
text = "DRONE TOURISM PROJECT"
label_settings = SubResource("LabelSettings_tif4o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -185.5
offset_right = 285.5
offset_bottom = 185.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19
alignment = 1

[node name="ServerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_tif4o")
text = "Start Server"

[node name="ClientButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_tif4o")
text = "Start Client"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_tif4o")
text = "Exit Application"

[connection signal="pressed" from="VBoxContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
